<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentityActivity">

    <TextView
        android:id="@+id/identity_title"
        android:layout_width="380dp"
        android:layout_height="35dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hello"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/identity_title_sub"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/if_you_think_this_is_cool_then_uh_oh_you_haven_t_seen_what_kuwait_codes_can_accomplish"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identity_title"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="400dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identity_title"
        app:layout_constraintVertical_bias="1.0"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:background="@drawable/radius">

            <TextView
                android:id="@+id/age_value"
                android:layout_width="140dp"
                android:layout_marginTop="20dp"
                android:layout_height="31dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textSize="24sp"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_caps"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:layout_marginStart="7dp"
            android:background="@drawable/radius" >

            <TextView
                android:id="@+id/height_value"
                android:layout_width="140dp"
                android:layout_height="31dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textSize="24sp"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_caps"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/go_back"
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:layout_marginTop="350dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>